# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//packages/package.gni")

executable("iozone_bin") {
  output_name = "iozone"

  sources = [
    "src/current/iozone.c",
  ]

  defines = [
    "NO_SIGNAL"
  ]
}

executable("fileop") {
  sources = [
    "src/current/fileop.c",
  ]
}

package("iozone") {
  deps = [
    ":fileop",
    ":iozone_bin",
  ]

  binaries = [
    {
      name = "iozone"
    },
    {
      name = "fileop"
    },
  ]
}
