# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//packages/package.gni")

config("iozone_config") {
  cflags = [
    "-Wno-sign-compare",
    "-Wno-unused-variable",
  ]
}

executable("iozone_bin") {
  output_name = "iozone"

  sources = [
    "src/current/iozone.c",
    "src/current/libbif.c",
  ]

  defines = [
    "NO_SIGNAL",
    "NO_THREADS",
    "HAVE_ANSIC_C",
    "unix",
    "NAME=\"fuchsia\"",
  ]

  configs += [ ":iozone_config" ]
}

executable("fileop") {
  sources = [
    "src/current/fileop.c",
  ]

  configs += [ ":iozone_config" ]
}

executable("ready") {
  sources = [
    "src/ready.cc",
  ]

  deps = [
    "//magenta/system/ulib/fs-management",
  ]
}

package("iozone") {
  deps = [
    ":fileop",
    ":ready",
    ":iozone_bin",
  ]

  binaries = [
    {
      name = "iozone"
    },
    {
      name = "fileop"
    },
    {
      name = "ready"
    },
    {
      name = "test.sh"
      source = "../../third_party/iozone/src/test.sh"
    },
  ]
}
